--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MWAp</title>
+    <title>Simple Math App</title>
 </head>
 <body>
     <h1>Math Web App</h1>
